# Unknown3d

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt  Engine.cpp  Engine.h  TestLauncher.cpp
Core/Device/: DeviceBase.cpp  DeviceBase.h  DeviceMgr.cpp  DeviceMgr.h  IDevice.cpp  IDevice.h  VulkanDevice.cpp  VulkanDevice.h  Vulkandevice.cpp
Core/FrameWork/: Application.cpp  Application.h  Include.h  Settings.h
Core/Geometry/: Window.cpp  Window.h
Core/Math3d/: Include.h  Math.h  Matrix4.cpp  Matrix4.h  Transform.h  Vector3.h  Vector4.h
Core/Mesh/: BufDescriptor.h  BufferBuilder.h  Mesh.cpp
Core/Scene/: Geometry.h  Include.h  Scene.cpp  Scene.h
Core/Tests/: Template.h
Core/Tests/Math3d/: TestVector.cpp  TestVector.h
Core/Window/: IWindow.cpp  IWindow.h  Win32Window.cpp  Win32Window.h  WindowMgr.cpp  WindowMgr.h
Tests/: TestLauncher.cpp
project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Tests.vcxproj  Tests.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
project/Core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Core.sln  Core.vcxproj  Core.vcxproj.filters  cmake_install.cmake
project/Core/Core.dir/Debug/Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
project/Core/Debug/: Core.lib
project/Debug/: Tests.ilk
project/Tests.dir/Debug/Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tests.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
